fix align col

--- a/src/components/Pools/PositionsTable/styles.scss
+++ b/src/components/Pools/PositionsTable/styles.scss
@@ -536,7 +536,7 @@
   display: flex;
   flex-direction: column;
   width: fit-content;
-  align-items: center;
+  align-items: flex-start;
   gap: 4px;
 
   .red {
